--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="megakit,business,company,agency,multipurpose,modern,bootstrap4">
   
-  <meta name="author" content="themefisher.com">
+  <meta name="author" content="tkvtv.com">
 
-  <title>Megakit| Html5 Agency template</title>
+  <title>TKVTV| Templates </title>
 
   <!-- bootstrap.min css -->
   <link rel="stylesheet" href="plugins/bootstrap/css/bootstrap.min.css">
