--- a/index.html
+++ b/index.html
@@ -528,17 +528,17 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="copyright">
-            &copy; Copyright Reserved to <span class="text-color">Megakit.</span> by <a href="https://themefisher.com/"
-              target="_blank">Themefisher</a>
+            &copy; Copyright Reserved to <span class="text-color">TKVTV.</span> by <a href="https://tkvtv.com/"
+              target="_blank">TKVTV</a>
           </div>
         </div>
         <div class="col-lg-6 text-left text-lg-right">
           <ul class="list-inline footer-socials">
-            <li class="list-inline-item"><a href="https://www.facebook.com/themefisher"><i
+            <li class="list-inline-item"><a href="https://www.facebook.com/tkgcci"><i
                   class="ti-facebook mr-2"></i>Facebook</a></li>
-            <li class="list-inline-item"><a href="https://twitter.com/themefisher"><i
+            <li class="list-inline-item"><a href="https://twitter.com/takagotch"><i
                   class="ti-twitter mr-2"></i>Twitter</a></li>
-            <li class="list-inline-item"><a href="https://www.pinterest.com/themefisher/"><i
+            <li class="list-inline-item"><a href="https://www.pinterest.com/takagotch/"><i
                   class="ti-linkedin mr-2 "></i>Linkedin</a></li>
           </ul>
         </div>
